--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "reselect": "^4.1.6",
     "reset-css": "^5.0.1",
     "socket.io-client": "^4.5.2",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
