--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,35 +10,37 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fontsource/roboto-flex": "^4.5.2",
-    "@heroicons/react": "^2.0.11",
+    "@heroicons/react": "^2.0.13",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/leaflet": "^1.8.0",
-    "@types/node": "^16.11.56",
-    "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6",
-    "immer": "^9.0.15",
-    "leaflet": "^1.9.1",
-    "nanoid": "^3.3.4",
-    "pollen-css": "^4.6.1",
+    "@types/leaflet": "^1.9.0",
+    "@types/node": "^16.18.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.0",
+    "base-x": "^4.0.0",
+    "immer": "^9.0.17",
+    "leaflet": "^1.9.3",
+    "pollen-css": "^4.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.1.0",
-    "react-router-dom": "^6.4.1",
+    "react-leaflet": "^4.2.0",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "reselect": "^4.1.6",
+    "reselect": "^4.1.7",
     "reset-css": "^5.0.1",
-    "socket.io-client": "^4.5.2",
+    "socket.io-client": "^4.5.4",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
-    "typescript": "^4.8.2",
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.1.1"
+    "zustand": "^4.2.0"
   },
   "eslintConfig": {
     "extends": [
