--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,19 +5,29 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
-    timeout-minutes: 20
+    runs-on: ubuntu-24.04
+    timeout-minutes: 10
 
     steps:
+
+      - name: Install Just
+        run: |
+          curl -sSfL --proto =https --tlsv1.2 -O 'https://github.com/casey/just/releases/download/1.38.0/just-1.38.0-x86_64-unknown-linux-musl.tar.gz'
+          echo 'c803e67fd7b0af01667bd537197bc3df319938eacf9e8d51a441c71d03035bb5  just-1.38.0-x86_64-unknown-linux-musl.tar.gz' | sha256sum -c
+          tar xf just-* just
+          mkdir -p $HOME/.local/bin
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          mv just $HOME/.local/bin/just
+          rm just-*
 
       - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Build Docker Images
-        run: make
+        run: just build
 
       - name: Build Frontend
-        run: docker-compose run -T --rm --no-deps frontend npm run build
+        run: docker compose run -T --rm --no-deps frontend npm run build
 
       - name: Build Backend
-        run: docker-compose run -T --rm --no-deps backend npm run build
+        run: docker compose run -T --rm --no-deps backend npm run build
