--- a/backend/Containerfile
+++ b/backend/Containerfile
@@ -1,4 +1,4 @@
-FROM node:16-alpine
+FROM node:22-bookworm-slim
 
 USER 1000
 RUN mkdir /home/node/app
@@ -8,9 +8,11 @@ COPY --chown=node:node .npmrc ./
 COPY --chown=node:node package*.json ./
 COPY --chown=node:node tsconfig*.json ./
 
-RUN npm ci --loglevel warn --build-from-source
+RUN npm ci --loglevel warn --build-from-source --ignore-scripts
 
 COPY --chown=node:node . .
 
-EXPOSE 3000
-CMD [ "npm", "run", "start" ]
+RUN npm run build
+
+EXPOSE 5000
+CMD [ "npm", "run", "migrate-and-start" ]
