--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2021",
-    "lib": ["ES2021"],
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "lib": ["ES2023"],
+    "target": "es2023",
+    "module": "node16",
     "sourceMap": true,
     "outDir": "./dist",
     "esModuleInterop": true,
