--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,61 +3,42 @@
   "name": "definitelymaps",
   "version": "1.0.0",
   "license": "UNLICENSED",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "check": "tsc -b --noEmit",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "optimize": "vite optimize"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@fontsource/roboto-flex": "^4.5.2",
-    "@heroicons/react": "^2.0.13",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/leaflet": "^1.9.0",
-    "@types/node": "^16.18.16",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@types/uuid": "^9.0.0",
-    "base-x": "^4.0.0",
-    "immer": "^9.0.17",
-    "leaflet": "^1.9.3",
-    "pollen-css": "^4.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.0",
-    "react-router-dom": "^6.6.1",
-    "react-scripts": "5.0.1",
-    "reselect": "^4.1.7",
-    "reset-css": "^5.0.1",
-    "socket.io-client": "^4.5.4",
-    "tweetnacl": "^1.0.3",
-    "tweetnacl-util": "^0.15.1",
-    "typescript": "^4.9.5",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4",
-    "zustand": "^4.2.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@eslint/js": "^9.17.0",
+    "@fontsource-variable/roboto-flex": "^5.1.1",
+    "@heroicons/react": "^2.2.0",
+    "@types/leaflet": "^1.9.15",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "base-x": "^5.0.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "immer": "^10.1.1",
+    "leaflet": "^1.9.4",
+    "pollen-css": "^5.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "reselect": "^5.1.1",
+    "reset-css": "^5.0.2",
+    "socket.io-client": "^4.8.1",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.0",
+    "uuid": "^11.0.3",
+    "vite": "^6.0.7",
+    "zustand": "^5.0.2"
   }
 }
